--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/frameLayout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">-->
-<android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="fill_parent">
+<!-- <android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/gestures"
 	android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
     
     android:gestureStrokeType="single"
-    android:eventsInterceptionEnabled="true">
+    android:eventsInterceptionEnabled="false">-->
     
     <GridView android:id="@+id/surfaceLayout"
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content"
     	android:gravity="top"
     	android:stretchMode="columnWidth" />
-<!-- </FrameLayout> -->
-</android.gesture.GestureOverlayView>
+</FrameLayout>
+<!-- </android.gesture.GestureOverlayView> -->
